--- a/flex.css
+++ b/flex.css
@@ -6,6 +6,7 @@ body{
     display: flex;
     align-items: center;
     justify-content: center;
+    flex-direction: column;
     font-family: 'Lexend Deca', sans-serif;
     font-weight: 400;
 }
